--- a/css/agency.css
+++ b/css/agency.css
@@ -13,15 +13,15 @@ p {
 }
 
 a {
-  color: #fed136;
+  color: #ecc816;
 }
 
 a:hover {
-  color: #fec503;
+  color: #bfa210;
 }
 
 .text-primary {
-  color: #fed136 !important;
+  color: #ecc816 !important;
 }
 
 h1,
@@ -53,6 +53,16 @@ section h3.section-subheading {
   font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+section h3.section-subheading-white {
+  font-size: 16px;
+  font-weight: 400;
+  font-style: italic;
+  margin-bottom: 75px;
+  text-transform: none;
+  color: white;
+  font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 @media (min-width: 768px) {
   section {
     padding: 150px 0;
@@ -70,13 +80,13 @@ section h3.section-subheading {
 }
 
 .btn-primary {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #ecc816;
+  border-color: #ecc816;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: #fec810 !important;
-  border-color: #fec810 !important;
+  background-color: #cbac11 !important;
+  border-color: #cbac11 !important;
   color: white;
 }
 
@@ -85,12 +95,12 @@ section h3.section-subheading {
 }
 
 ::-moz-selection {
-  background: #fed136;
+  background: #ecc816;
   text-shadow: none;
 }
 
 ::selection {
-  background: #fed136;
+  background: #ecc816;
   text-shadow: none;
 }
 
@@ -113,17 +123,21 @@ img::-moz-selection {
   text-transform: uppercase;
   color: white;
   border: 0;
-  background-color: #fed136;
+  background-color: #ecc816;
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #mainNav .navbar-brand {
-  color: #fed136;
+  color: #ecc816;
   font-family: 'Kaushan Script', 'Helvetica Neue', Helvetica, Arial, cursive;
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #fec503;
+  color: #bfa210;
+}
+
+#mainNav .navbar-nav {
+  margin-bottom: -25px;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -136,7 +150,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
-  color: #fed136;
+  color: #ecc816;
 }
 
 @media (min-width: 992px) {
@@ -216,9 +230,9 @@ header.masthead .intro-text .intro-heading {
     font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
   header.masthead .intro-text .intro-heading {
-    font-size: 75px;
+    font-size: 65px;
     font-weight: 700;
-    line-height: 75px;
+    line-height: 65px;
     margin-bottom: 50px;
     font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
@@ -250,7 +264,7 @@ header.masthead .intro-text .intro-heading {
   -moz-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(236, 200, 22, 0.9);
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
@@ -454,7 +468,7 @@ header.masthead .intro-text .intro-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #fed136;
+  background-color: #ecc816;
 }
 
 .timeline > li .timeline-image h4 {
@@ -596,6 +610,19 @@ header.masthead .intro-text .intro-heading {
   margin-top: 0;
 }
 
+.about-bg {
+  background-image: url("../img/about/about-bg-inverted.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  color: white;
+}
+
+.about-bg .section-subheading {
+  font-size: 18px;
+  color: #ecc816;
+}
+
 section#contact {
   background-color: #212529;
   background-image: url("../img/map-image.png");
@@ -625,7 +652,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: #ecc816;
   box-shadow: none;
 }
 
@@ -695,5 +722,5 @@ ul.social-buttons li a {
 }
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
-  background-color: #fed136;
+  background-color: #ecc816;
 }
