--- a/scss/agency.scss
+++ b/scss/agency.scss
@@ -10,5 +10,6 @@
 @import "portfolio.scss";
 @import "timeline.scss";
 @import "team.scss";
+@import "about.scss";
 @import "contact.scss";
 @import "footer.scss";
