--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -53,6 +53,14 @@ section {
     color: white;
     @include serif-font;
   }
+  h3.contact-us-heading{
+    font-size: 16px;
+    font-weight: 400;
+    font-style: italic;
+    text-transform: none;
+    color: white;
+    @include serif-font;
+  }
 }
 @media(min-width:768px) {
   section {
